--- a/app/views/15/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/15/pre-sentence-report/culpability-and-risk.html
@@ -79,63 +79,164 @@
             Risk to others
           </h2>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
-              Risk of harm to known individuals and partners
-            </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
-              What is the risk to specific people and what circumstances
-              could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-known-person-risk" name="defendant-known-person-risk" rows="8" aria-describedby="defendant-known-person-risk-hint">{{data['defendant-known-person-risk']}}</textarea>
+            <fieldset class="govuk-fieldset" aria-describedby="risk-of-serious-harm-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Is there a risk of serious harm to others?
+                </h3>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-serious-harm" name="risk-of-serious-harm" type="radio" value="Yes" data-aria-controls="conditional-serious-harm-yes" {{ checked("risk-of-serious-harm", "Yes") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-serious-harm">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-serious-harm-yes">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="conditional-reconviction-yes">
+                      How likely is the defendant to seriously harm others? What are the circumstances that could affect this risk?
+                    </label>
+                    <textarea class="govuk-textarea" id="defendant-public-risk" name="defendant-public-risk" rows="8" aria-describedby="defendant-public-risk-hint">{{data['defendant-public-risk']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-serious-harm-2" name="risk-of-serious-harm" type="radio" value="No" {{ checked("risk-of-serious-harm", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-serious-harm-2">
+                    No
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="defendant-children-risk">
-              Risk of harm to children
-            </h3>
-            <div id="defendant-children-risk-hint" class="govuk-hint">
-              What is the risk to children and what circumstances
-              could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-children-risk" name="defendant-children-risk" rows="8" aria-describedby="defendant-children-risk-hint">{{data['defendant-children-risk']}}</textarea>
+            <fieldset class="govuk-fieldset" aria-describedby="risk-to-known-individuals-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Is there a risk of harm to known individuals?
+                </h3>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-to-known-individuals" name="risk-to-known-individuals" type="radio" value="Yes" data-aria-controls="conditional-harm-to-known-individuals-yes" {{ checked("risk-to-known-individuals", "Yes") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-to-known-individuals">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-harm-to-known-individuals-yes">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="conditional-reconviction-yes">
+                      What is the risk to specific people and what circumstances could affect this risk?
+                    </label>
+                    <textarea class="govuk-textarea" id="defendant-known-person-risk" name="defendant-known-person-risk" rows="8" aria-describedby="defendant-known-person-risk-hint">{{data['defendant-known-person-risk']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-to-known-individuals-2" name="risk-to-known-individuals" type="radio" value="No" {{ checked("risk-to-known-individuals", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-to-known-individuals-2">
+                    No
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="defendant-public-risk">
-              Risk of harm to the public
-            </h3>
-            <div id="defendant-public-risk-hint" class="govuk-hint">
-              What is the risk to the public and what circumstances
-              could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-public-risk" name="defendant-public-risk" rows="8" aria-describedby="defendant-public-risk-hint">{{data['defendant-public-risk']}}</textarea>
+            <fieldset class="govuk-fieldset" aria-describedby="risk-of-harm-to-children-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Is there a risk of serious harm to children?
+                </h3>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-harm-to-children" name="risk-of-harm-to-children" type="radio" value="Yes" data-aria-controls="conditional-risk-of-harm-to-children-yes" {{ checked("risk-of-harm-to-children", "Yes") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-to-known-individuals">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-risk-of-harm-to-children-yes">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="conditional-reconviction-yes">
+                      What is the risk to children and what circumstances could affect this risk?
+                    </label>
+                    <textarea class="govuk-textarea" id="defendant-children-risk" name="defendant-children-risk" rows="8" aria-describedby="defendant-children-risk-hint">{{data['defendant-children-risk']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-harm-to-children-2" name="risk-of-harm-to-children" type="radio" value="No" {{ checked("risk-of-harm-to-children", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-harm-to-children-2">
+                    No
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <h2 class="govuk-heading-l">Risk to themselves</h2>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="defendant-reconviction-risk">
-              Risk of reconviction
-            </h3>
-            <div id="defendant-reconviction-risk-hint" class="govuk-hint">
-              How likely is the defendant to reconvict? What are the
-              circumstances that could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-reconviction-risk" name="defendant-reconviction-risk" rows="8" aria-describedby="defendant-reconviction-risk-hint">{{data['defendant-reconviction-risk']}}</textarea>
-          </div>
-          <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="defendant-recidivism-risk">
-              Risk of serious recidivism
-            </h3>
-            <div id="defendant-recidivism-risk-hint" class="govuk-hint">
-              How likely is the defendant to engage in serious recidivism? What
-              are the circumstances that could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-recidivism-risk" name="defendant-recidivism-risk" rows="8" aria-describedby="defendant-recidivism-risk-hint">{{data['defendant-recidivism-risk']}}</textarea>
+            <fieldset class="govuk-fieldset" aria-describedby="risk-of-reconviction-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Is there a general risk of reconviction?
+                </h3>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-reconviction" name="risk-of-reconviction" type="radio" value="Yes" data-aria-controls="conditional-reconviction-yes" {{ checked("risk-of-reconviction", "Yes") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-reconviction">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-reconviction-yes">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="conditional-reconviction-yes">
+                      How likely is the defendant to reconvict? What are the circumstances that could affect this risk?
+                    </label>
+                    <textarea class="govuk-textarea" id="defendant-reconviction-risk" name="defendant-reconviction-risk" rows="8" aria-describedby="defendant-reconviction-risk-hint">{{data['defendant-reconviction-risk']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-reconviction-2" name="risk-of-reconviction" type="radio" value="No" {{ checked("risk-of-reconviction", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-reconviction-2">
+                    No
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="defendant-self-harm-risk">
-              Risk of self harm
-            </h3>
-            <div id="defendant-self-harm-risk-hint" class="govuk-hint">
-              How likely is the defendant to reconvict? What are the
-              circumstances that could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-self-harm-risk" name="defendant-self-harm-risk" rows="8" aria-describedby="defendant-self-harm-risk-hint">{{data['defendant-self-harm-risk']}}</textarea>
+            <fieldset class="govuk-fieldset" aria-describedby="risk-of-self-harm-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Is there a risk of serious harm to themselves?
+                </h3>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-self-harm" name="risk-of-self-harm" type="radio" value="Yes" data-aria-controls="conditional-self-harm-yes" {{ checked("risk-of-self-harm", "Yes") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-self-harm">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-self-harm-yes">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="conditional-reconviction-yes">
+                      How likely is the defendant to reconvict? What are the circumstances that could affect this risk?
+                    </label>
+                    <textarea class="govuk-textarea" id="defendant-self-harm-risk" name="defendant-self-harm-risk" rows="8" aria-describedby="defendant-self-harm-risk-hint">{{data['defendant-self-harm-risk']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="risk-of-reconviction-2" name="risk-of-reconviction" type="radio" value="No" {{ checked("risk-of-reconviction", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="risk-of-reconviction-2">
+                    No
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
