Content amends for victim impact assessment

--- a/app/views/15/pre-sentence-report/consider-sentence-components.html
+++ b/app/views/15/pre-sentence-report/consider-sentence-components.html
@@ -75,9 +75,8 @@
                 <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
                 </h2>
                 <div id="consider-punitive-sentence-component-hint" class="govuk-hint">
-                  What are you considering as the punitive aspect of the sentence.
-                  This is a space for notes so that you can explore options and
-                  demonstrate professional curiosity.</div>
+                  Explain what you think the punitive aspect of this sentence
+                  should be and why.</div>
                 <textarea class="govuk-textarea" id="consider-punitive-sentence-component" name="consider-punitive-sentence-component" rows="8" aria-describedby="consider-punitive-sentence-component-hint">{{data['consider-punitive-sentence-component']}}</textarea>
               </div>
             </div>
@@ -92,12 +91,10 @@
                   </label>
                 </h2>
                 <div id="consider-rehabilitative-sentence-component-hint" class="govuk-hint">
-                  What are you considering as the rehabilitative aspect of the sentence.
-                  This is a space for notes so that you can explore options,
-                  demonstrate professional curiosity and note down things like
-                  available accredited programs available in your area that could
-                  benefit the defendant and that they have previously proven
-                  effective.</div>
+                  Explain what you think the rehabilitative aspect of this
+                  sentence is, giving reference to things like available
+                  accredited programs available in your area that could benefit
+                  the defendant or have proven effective previously.</div>
                 <textarea class="govuk-textarea" id="consider-rehabilitative-sentence-component" name="consider-rehabilitative-sentence-component" rows="8" aria-describedby="consider-rehabilitative-sentence-component-hint">{{data['consider-rehabilitative-sentence-component']}}</textarea>
               </div>
             </div>
@@ -175,9 +172,8 @@
                   </label>
                 </h2>
                 <div id="consider-public-safety-sentence-component-hint" class="govuk-hint">
-                  What are you considering as the public safety aspect of the sentence.
-                  This is a space for notes so that you can explore options and
-                  demonstrate professional curiosity.</div>
+                  Explain what you think the public safety aspect of the
+                  sentence is.</div>
                 <textarea class="govuk-textarea" id="consider-public-safety-sentence-component" name="consider-public-safety-sentence-component" rows="8" aria-describedby="consider-public-safety-sentence-component-hint">{{data['consider-public-safety-sentence-component']}}</textarea>
               </div>
             </div>
