--- a/app/views/15/pre-sentence-report/victim-impact-assessment.html
+++ b/app/views/15/pre-sentence-report/victim-impact-assessment.html
@@ -66,14 +66,15 @@
               Victim impact assessment
             </h1>
             <p class="govuk-body">
-              The victim impact statement should be included as part of the CPS
-              pack.</p>
+              The victim impact assessment is used to inform sentencing options
+              such as exclusion zones. You will be able to review this later as
+              you are writing your sentencing proposal.</p>
             <p class="govuk-body">
               <a class="govuk-link" href="#">
                 <svg class="moj-timeline__document-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20" width="20" height="16">
                   <path fill="#1d70b8" d="M9 7V1.5L14.5 7H9zM2 0C.9 0 0 .9 0 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6l-6-6H2z" />
                 </svg>
-                CPS pack
+                View CPS pack
               </a>
             </p>
             <details class="govuk-details">
@@ -84,17 +85,10 @@
               </summary>
               <div class="govuk-details__text">
                 <p class="govuk-body">
-                  Summarise the information here so that it can be used to
-                  inform sentencing options later in the report. This may
-                  include things like exclusion zones and can feed into the
-                  risk of serious harm.</p>
-                <p class="govuk-body">
-                  Do not simply restate the facts from the CPS report, or rely
-                  solely on the account provided in the pre-sentence report
-                  interview.</p>
-                <p class="govuk-body">
-                  You may want to consider the defendant's:
-                </p>
+                  The CPS pack usually includes a statement from the victim.
+                  Use this alongside the account provided in the pre-sentence
+                  interview to write the victim impact assessment. This should
+                  consider the defendant's:</p>
                 <ul class="govuk-list govuk-list--bullet">
                   <li>attitudes</li>
                   <li>responsibility</li>
