Add victim impact assessment notes to write report page

--- a/app/views/15/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/15/pre-sentence-report/write-sentencing-proposal.html
@@ -86,6 +86,18 @@
                   <div class="govuk-accordion__section-header">
                     <h3 class="govuk-accordion__section-heading">
                       <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
+                        Review notes on victim impact assessment
+                      </span>
+                    </h3>
+                  </div>
+                  <div id="accordion-default-content-1" class="govuk-accordion__section-content">
+                    <p class="govuk-body">{{data['victim-impact-assessment'] | default('These are my notes on the victim impact assessment. They will be used to inform the sentencing proposal.')}}</p>
+                  </div>
+                </div>
+                <div class="govuk-accordion__section">
+                  <div class="govuk-accordion__section-header">
+                    <h3 class="govuk-accordion__section-heading">
+                      <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
                         Review notes on culpability and risk to others
                       </span>
                     </h3>
