Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,22 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3890">
+          Improvements based on feedback form Andy Mason (subject matter expert).
+          <br />
+          This includes:</a></p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Making risk questions optional</li>
+            <li>Outputting None on the report preview instead of No so its
+              better english </li>
+            <li>Add patterns of offending and response to supervision page to
+              encourage professional curiosity</li>
+            <li>OGRS box becomes risk identifiers</li>
+            <li>Add victim impact assessment notes to write sentencing proposal
+              page</li>
+          </ul>
+      </li>
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3839">
           Create initial version of the PSR journey.<br />
           This includes incrementing the prototype.</a></p>
