Instance prototype and link to ticket

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,23 @@
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
+    <h2 class="govuk-heading-m">v16</h2>
+    <p><a class="govuk-link" href="/16/verification-report/index.html">
+      Verification report prototype</a> |
+      <a class="govuk-link" href="/16/pre-sentence-report/index.html">
+      Pre-sentence report prototype</a></p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3890">
+          SME Review</a>
+          <br />
+          We had some changes but the SME(s) were not being honest so this work
+          has a substantial amount of changes to the questions/ how we ask them/
+          principles of a more guided experience.
+          <br />
+          SME(s) expected a digital version of their design sprint artifact so
+          we will make those changes for our delayed first round of testing.
+      </li>
     <h2 class="govuk-heading-m">v15</h2>
     <p><a class="govuk-link" href="/15/verification-report/index.html">
       Verification report prototype</a> |
